--- a/cv/html/CSS/style.css
+++ b/cv/html/CSS/style.css
@@ -47,7 +47,7 @@ a:nth-child(5){
 nav .start-me, a:nth-child(1):hover~.animation {
   width: 100px;
   left: 0px;
-  background-color: #966855;
+  background-color: #93ec4a;
 }
 nav .start-me, a:nth-child(2):hover~.animation {
   width: 90px;
@@ -93,17 +93,18 @@ div.text {
 li.courses {
   margin-bottom: 10px;
   font-size: 25px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Times New Roman', Times, serif;
 
 }
-ol {
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 15px;
+ul {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
 }
 h1.courses {
   font-family:'Times New Roman', Times, serif;
 }
-h2.courses {
+#favoritkurser {
   font-family:'Times New Roman', Times, serif;
   margin-top: 50px;
+  line-height: 5px;
 }
